[tool.poetry]
name = "roundtable_db"
version = "0.1.0"
description = "a simple learning project to create a database from scratch"
authors = ["Matthew McKnight"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
